# Jarvis

./: LICENSE  README.md  main.py  pyproject.toml
omniparser/: box_annotator.py  model.py  utils.py
prompts/: computer_usage_prompt.yaml
tools/: __init__.py  computer_input.py  screenshot.py  user_input.py
