[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "supervision>=0.25.1",
    "transformers>=4.49.0",
    "ultralytics>=8.3.77",
    "opencv-python>=4.11.0.86",
    "setuptools>=75.8.0",
    "easyocr>=1.7.2",
    "timm>=1.0.14",
    "einops>=0.8.1",
    "numpy>=2.1.1",
    "smolagents[openai]>=1.9.2",
    "sounddevice>=0.5.1",
    "gigaam",
    "pyautogui>=0.9.54",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
gigaam = { git = "https://github.com/salute-developers/GigaAM.git" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit=true
